# MahekaruProfileCoreAPI/Controllers/ProfileController.cs
@@ -28,7 +28,7 @@ namespace MahekaruProfileCoreAPI.Controllers
             return await _context.Profile.ToListAsync();
         }
 
-        // GET: api/Profiles/5
+        //GET: api/Profiles/5
         [HttpGet("{id}")]
         public async Task<ActionResult<ProfileModel>> GetProfile(int id)
         {
@@ -44,61 +44,61 @@ namespace MahekaruProfileCoreAPI.Controllers
 
         // PUT: api/Profiles/5
         // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
-        [HttpPut("{id}")]
-        public async Task<IActionResult> PutProfile(int id, ProfileModel profile)
-        {
-            if (id != profile.Id)
-            {
-                return BadRequest();
-            }
+        //[HttpPut("{id}")]
+        //public async Task<IActionResult> PutProfile(int id, ProfileModel profile)
+        //{
+        //    if (id != profile.Id)
+        //    {
+        //        return BadRequest();
+        //    }
 
-            _context.Entry(profile).State = EntityState.Modified;
+        //    _context.Entry(profile).State = EntityState.Modified;
 
-            try
-            {
-                await _context.SaveChangesAsync();
-            }
-            catch (DbUpdateConcurrencyException)
-            {
-                if (!ProfileExists(id))
-                {
-                    return NotFound();
-                }
-                else
-                {
-                    throw;
-                }
-            }
+        //    try
+        //    {
+        //        await _context.SaveChangesAsync();
+        //    }
+        //    catch (DbUpdateConcurrencyException)
+        //    {
+        //        if (!ProfileExists(id))
+        //        {
+        //            return NotFound();
+        //        }
+        //        else
+        //        {
+        //            throw;
+        //        }
+        //    }
 
-            return NoContent();
-        }
+        //    return NoContent();
+        //}
 
         // POST: api/Profiles
         // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
-        [HttpPost]
-        public async Task<ActionResult<ProfileModel>> PostProfile(ProfileModel profile)
-        {
-            _context.Profile.Add(profile);
-            await _context.SaveChangesAsync();
+        //[HttpPost]
+        //public async Task<ActionResult<ProfileModel>> PostProfile(ProfileModel profile)
+        //{
+        //    _context.Profile.Add(profile);
+        //    await _context.SaveChangesAsync();
 
-            return CreatedAtAction("GetProfile", new { id = profile.Id }, profile);
-        }
+        //    return CreatedAtAction("GetProfile", new { id = profile.Id }, profile);
+        //}
 
         // DELETE: api/Profiles/5
-        [HttpDelete("{id}")]
-        public async Task<IActionResult> DeleteProfile(int id)
-        {
-            var profile = await _context.Profile.FindAsync(id);
-            if (profile == null)
-            {
-                return NotFound();
-            }
+        //[HttpDelete("{id}")]
+        //public async Task<IActionResult> DeleteProfile(int id)
+        //{
+        //    var profile = await _context.Profile.FindAsync(id);
+        //    if (profile == null)
+        //    {
+        //        return NotFound();
+        //    }
 
-            _context.Profile.Remove(profile);
-            await _context.SaveChangesAsync();
+        //    _context.Profile.Remove(profile);
+        //    await _context.SaveChangesAsync();
 
-            return NoContent();
-        }
+        //    return NoContent();
+        //}
 
         private bool ProfileExists(int id)
         {
